--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,18 @@
 {
-  "name": "IS2 Productivity Hub",
-  "short_name": "IS2 Hub",
+  "name": "IS2 HUB",
+  "short_name": "IS2 HUB",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
-  "description": "Information System 2 Academic Command Center",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
