--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "IS2 HUB ULTIMATE",
+  "name": "Information System 2 HUB",
   "short_name": "IS2 HUB",
   "start_url": "/index.html",
   "display": "standalone",
